--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,6 @@
 
 
     <!-- Strings add by Juan -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="two_girls_with_a_big_star">two girls with a big star</string>
     <string name="feedbacks_dispon_veis">Feedbacks disponíveis</string>
     <string name="editar_perfil">Editar perfil</string>
@@ -23,4 +22,29 @@
     <string name="colabora_o_dashboard">Colaboração:</string>
     <string name="compromisso_dashboard">Compromisso:</string>
     <string name="comunica_o_dashboard">Comunicação:</string>
+
+
+    <!-- Strings add by Danny -->
+
+    <!-- LOGIN -->
+    <string name="app_name">Roast.ly</string>
+    <string name="small_logo_description">Logo Small Roast.ly</string>
+    <string name="titulo_boas_vindas">Boas-vindas!</string>
+    <string name="texto_login">Faz já login para poderes dar ou receber feedback</string>
+    <string name="email_hint">Digita o email</string>
+    <string name="password_hint">Digita a password</string>
+    <string name="esqueceu_password">Esqueceste-te da password?</string>
+    <string name="login_button_text">Login</string>
+
+    <!-- REGISTAR -->
+
+    <string name="create_account_text">Ainda não estás registado? Cria conta</string>
+    <string name="create_account_title">Criar nova conta</string>
+    <string name="create_account_nome_hint">Nome</string>
+    <string name="create_account_ultimo_nome_hint">Apelido</string>
+    <string name="create_account_email_hint">Digita o email</string>
+    <string name="create_account_password_hint">Password</string>
+    <string name="create_account_confirm_password_hint">Confirma a password</string>
+    <string name="create_account_cargo_hint">Cargo</string>
+    <string name="create_account_button_text">Registar</string>
 </resources>
