Layout create_account  adjusted.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,8 @@
     <string name="alterar_cargo">Alterar cargo</string>
     <string name="icon_camera">icon camera</string>
     <string name="user_photo">User Photo</string>
+    <string name="registar">Registar</string>
+    <string name="cargo">Cargo</string>
+    <string name="password_">Password</string>
+    <string name="apelido">Apelido</string>
 </resources>
