Atualizações no fragment_profile e ProfileFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -80,4 +80,5 @@
     <string name="stars_icon_">stars icon</string>
     <string name="stars_icon__">stars icon</string>
     <string name="stars_icon___">stars icon</string>
+    <string name="capacidade">Capacidade:</string>
 </resources>
