--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -81,4 +81,9 @@
     <string name="stars_icon__">stars icon</string>
     <string name="stars_icon___">stars icon</string>
     <string name="capacidade">Capacidade:</string>
+    <string name="editar">Editar</string>
+    <string name="cargo_">Cargo</string>
+    <string name="editar_">Editar</string>
+    <string name="password__">Password</string>
+    <string name="alterar_password">Alterar password</string>
 </resources>
