--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="salvar_altera_es">Salvar alterações</string>
     <string name="login">Login</string>
     <string name="not_registered_yet_create_account">Not registered yet? Create Account</string>
+    <string name="icon_menu">icon</string>
 </resources>
