--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,9 @@
     <string name="small_logo__">Small Logo</string>
     <string name="submeter">Submeter</string>
     <string name="adicionar_coment_rio">Adicionar comentário</string>
+    <string name="profile_photo_content_desc" />
+    <string name="name">Name</string>
+    <string name="deu_feedback_a">deu feedback a</string>
+    <string name="name_">Name</string>
+    <string name="hoje_s_14h">Hoje às 14h</string>
 </resources>
