New updates in the fragment_leaderboards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,13 @@
     <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_phasellus_imperdiet_nulla_et_ullamcorper_dignissim_nullam_id_dolor_quis_velit_fringilla_venenatis_integer_vitae_metus_ac_felis_varius_posuere">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet nulla et ullamcorper dignissim. Nullam id dolor quis velit fringilla venenatis. Integer vitae metus ac felis varius posuere.</string>
     <string name="destaques_do_m_s">Destaques do mês</string>
     <string name="menu_icon">menu icon</string>
+    <string name="name____">Name</string>
+    <string name="initiative_icon" />
+    <string name="collaboration_icon" />
+    <string name="responsibility_icon" />
+    <string name="responsabilidade__">Responsabilidade</string>
+    <string name="communication_icon" />
+    <string name="five_star_icon" />
+    <string name="destaque_em_todas_as_categorias">Destaque em todas as categorias</string>
+    <string name="name_____">Name</string>
 </resources>
