Adicionado string a string.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,5 @@
     <string name="feedbacks_efetuados_">Feedbacks efetuados</string>
     <string name="feedbacks_recebidos_">Feedbacks recebidos</string>
     <string name="feedbacks_realizados">Feedbacks realizados</string>
+    <string name="star_icon">Star icon</string>
 </resources>
