Implementado feedbacks recebidos e dados

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,7 +108,7 @@
     <string name="deu_feedback_a">deu feedback a</string>
     <string name="name_">Name</string>
     <string name="hoje_s_14h">Hoje às 14h</string>
-    <string name="avalia_es_de">Avaliações de</string>
+    <string name="avalia_es_de">Avaliação de</string>
     <string name="name__">Name</string>
     <string name="para">para</string>
     <string name="name___">Name</string>
