--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,7 @@
     <string name="feedbacks_efetuados_">Feedbacks efetuados</string>
     <string name="feedbacks_recebidos_">Feedbacks recebidos</string>
     <string name="feedbacks_realizados">Feedbacks realizados</string>
+    <string name="enviaremos_um_email_com_instru_es_para_que_possas_criar_uma_nova">Enviaremos um email com instruções para que possas criar uma nova.</string>
+    <string name="esqueceste_a_password">Esqueceste a password?</string>
+    <string name="recuperar_password">Recuperar password</string>
 </resources>
