Adjust in the profile_user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="feedbacks_dispon_veis">Feedbacks disponíveis</string>
     <string name="editar_perfil">Editar perfil</string>
     <string name="feedbacks_recebidos">Feedbacks recebidos:</string>
-    <string name="feedbacks_efetuados">Feedbacks efetuados:</string>
+    <string name="feedbacks_efetuados">Feedbacks dados:</string>
     <string name="m_dia_pessoal">Média pessoal</string>
     <string name="iniciativa">Iniciativa:</string>
     <string name="colabora_o">Colaboração:</string>
