Updates in the fragment_profile_user

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -151,4 +151,5 @@
     <string name="small_logo___">Small Logo</string>
     <string name="add_">Add</string>
     <string name="ranking_">Ranking</string>
+    <string name="m_dia_pessoal_">Média pessoal</string>
 </resources>
